@@ -101,6 +101,8 @@ Treat
 as a warning, even if
 \fB\-Werror\fR
 is given\&.
+\fIerrorcode\fR
+must be a warning or a minor error\&.
 .sp
 Use
 \fB\-\-list\-errors\fR
